--- a/shrek.html
+++ b/shrek.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
+
+
 <body>
+
+    <div id="forest">
+
+        <img class = "" id="shrek" src="">
+        <img class = "" id="donkey" src="">
+
+    </div>
+
+    <div class="Buttons">
+
+        <audio id="startMusic" preload="auto">         <source src="">
+        </audio>
+
+        <button id="firstButton">Start Adventure</button>
+        <button id="peekButton">Peekaboo!</button>
+
+    </div>
+
+
+
+
     <script src="moves.js"></script>
 </body>
 </html>
