Added Img and audio Folders

--- a/shrek.html
+++ b/shrek.html
@@ -13,8 +13,8 @@
 
     <div id="forest">
 
-        <img class = "" id="shrek" src="">
-        <img class = "" id="donkey" src="">
+        <img class = "" id="shrek" src="/">
+        <img class = "" id="donkey" src="/">
 
     </div>
 
