First button works (sound missing), second button as well, but Shrek is moving.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 
     <div id="forest">
 
-        <img class = "" id="shrek" src="/">
-        <img class = "" id="donkey" src="/">
+        <img class = "" id="shrek" src="img/shrekright.png">
+        <img class = "" id="donkey" src="img/donkey.png">
 
     </div>
 
     <div class="Buttons">
 
-        <audio id="startMusic" preload="auto">         <source src="">
+        <audio id="horse" preload="auto">
+            <source src="audio/Horse.mp3">
         </audio>
 
         <button id="firstButton">Start Adventure</button>
