Scene 3 is done!

--- a/index.html
+++ b/index.html
@@ -13,19 +13,28 @@
 
     <div id="forest">
 
-        <img class = "" id="shrek" src="img/shrekright.png">
+        <img id="shrek" src="img/shrekright.png">
         <img class = "" id="donkey" src="img/donkey.png">
+
+        <button id="firstButton">Start Adventure</button>
+
+        <button class="hidden" id="peekButton">Peekaboo!</button>
+
+        <button class="hidden" id="scene3Button">scene3!</button>
+
+        <button class="hidden" id="choice1">choice1!</button>
+        <button class="hidden" id="choice2">choice3!</button>
 
     </div>
 
-    <div class="Buttons">
-
+    <div class="audioSounds">
+        <audio id="startSong" preload="auto" volume="0.1">
+            <source src="audio/start.mp3">
+        </audio>
         <audio id="horse" preload="auto">
             <source src="audio/Horse.mp3">
         </audio>
 
-        <button id="firstButton">Start Adventure</button>
-        <button id="peekButton">Peekaboo!</button>
 
     </div>
 
